# rov-onboard

./: Dockerfile  README.md  cyclonedds_onboard.xml  docker-compose.yml  start-docker.sh  start.sh  stop-docker.sh  stop.sh
src/rov_cameras/: README.md  package.xml  setup.cfg  setup.py
src/rov_cameras/launch/: cameras.launch.py  mavros.launch.py
src/rov_cameras/rov_cameras/: arm_service.py  joy_to_mavlink.py  mavlink_bridge.py  photogrammetry_node.py
src/rov_cameras/scripts/: build.sh  start_joy_translator.sh  start_onboard.sh
src/rov_flight/: package.xml  setup.cfg  setup.py
src/rov_flight/launch/: mavros.launch.py
src/rov_flight/rov_flight/: joy_to_mavlink.py
src/rov_photogrammetry/: package.xml  setup.py
