<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rov_flight</name>
  <version>0.1.0</version>
  <description>ROV flight control: joystick to MAVLink, MAVROS bridge, depth hold PID</description>
  <maintainer email="hydromeda@todo.todo">hydromeda</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>mavros_msgs</depend>

  <exec_depend>mavros</exec_depend>
  <exec_depend>mavros_extras</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
